{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 72,
  "lineage": "af2119ff-a9f9-708f-f4c1-77c2a0e5fdc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-1512522347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b52893d7824b9fc9",
            "security_group_rule_id": "sgr-056a7b75b56cafc9b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:security-group/sg-093323a1da47049f1",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-093323a1da47049f1",
            "ingress": [],
            "name": "hp-udd-prod20241115044038466400000002",
            "name_prefix": "hp-udd-prod",
            "owner_id": "339713165548",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod-eks_cluster_sg",
              "kubernetes.io/cluster/hp-udd-prod": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod-eks_cluster_sg",
              "kubernetes.io/cluster/hp-udd-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:security-group/sg-081bcbf2ff0fb616c",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-081bcbf2ff0fb616c",
            "ingress": [],
            "name": "hp-udd-prod20241115044038465500000001",
            "name_prefix": "hp-udd-prod",
            "owner_id": "339713165548",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod-eks_worker_sg",
              "kubernetes.io/cluster/hp-udd-prod": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod-eks_worker_sg",
              "kubernetes.io/cluster/hp-udd-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-757251068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-093323a1da47049f1",
            "security_group_rule_id": "sgr-047cd14b28a1108b9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-76999706",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093323a1da47049f1",
            "security_group_rule_id": "sgr-0f0dbe11b914f530d",
            "self": false,
            "source_security_group_id": "sg-081bcbf2ff0fb616c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1422631393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-081bcbf2ff0fb616c",
            "security_group_rule_id": "sgr-02382bb49084eee6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-879572590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-081bcbf2ff0fb616c",
            "security_group_rule_id": "sgr-009100e28a7b5de99",
            "self": false,
            "source_security_group_id": "sg-093323a1da47049f1",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1955532636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-081bcbf2ff0fb616c",
            "security_group_rule_id": "sgr-0890501e112bb084e",
            "self": false,
            "source_security_group_id": "sg-093323a1da47049f1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1659192094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-081bcbf2ff0fb616c",
            "security_group_rule_id": "sgr-08e9e821384bfb32f",
            "self": false,
            "source_security_group_id": "sg-081bcbf2ff0fb616c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a8f5c129aa6d62",
            "arn": "arn:aws:ec2:ap-south-1:339713165548:elastic-ip/eipalloc-031a8f5c129aa6d62",
            "domain": "vpc",
            "id": "eipalloc-031a8f5c129aa6d62",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-203-35-17.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.35.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "eip-hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "eip-hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:internet-gateway/igw-01182d04d2210408b",
            "id": "igw-01182d04d2210408b",
            "owner_id": "339713165548",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031a8f5c129aa6d62",
            "association_id": "eipassoc-050ae7eca83eea344",
            "connectivity_type": "public",
            "id": "nat-0243410dc66f81f50",
            "network_interface_id": "eni-04005c825530c4264",
            "private_ip": "192.168.0.146",
            "public_ip": "13.203.35.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d9b873c4971a9cc",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "nat-gw-hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "nat-gw-hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:route-table/rtb-036f601f89103a050",
            "id": "rtb-036f601f89103a050",
            "owner_id": "339713165548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0243410dc66f81f50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "private-hp-udd-prod-rtb",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "private-hp-udd-prod-rtb",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:route-table/rtb-0a0c9a21146160c07",
            "id": "rtb-0a0c9a21146160c07",
            "owner_id": "339713165548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01182d04d2210408b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "public-hp-udd-prod-rtb",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "public-hp-udd-prod-rtb",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aae281ffe2f850f7",
            "route_table_id": "rtb-036f601f89103a050",
            "subnet_id": "subnet-06ab05fbfd378bbc0"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c14990dfe0e0bf4",
            "route_table_id": "rtb-036f601f89103a050",
            "subnet_id": "subnet-079384c6aa806aa50"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0661f4c7977883899",
            "route_table_id": "rtb-0a0c9a21146160c07",
            "subnet_id": "subnet-02d9b873c4971a9cc"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07551e35943d51135",
            "route_table_id": "rtb-0a0c9a21146160c07",
            "subnet_id": "subnet-0eb925d892e6fffc2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:security-group/sg-0b52893d7824b9fc9",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-0b52893d7824b9fc9",
            "ingress": [],
            "name": "db-hp-udd-prod",
            "name_prefix": "",
            "owner_id": "339713165548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-hp-udd-prod"
            },
            "tags_all": {
              "Name": "db-hp-udd-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:subnet/subnet-06ab05fbfd378bbc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab05fbfd378bbc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713165548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "ap-south-1b-hp-udd-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "ap-south-1b-hp-udd-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:subnet/subnet-079384c6aa806aa50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079384c6aa806aa50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713165548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "ap-south-1a-hp-udd-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "ap-south-1a-hp-udd-prod",
              "SubnetType": "Private",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:subnet/subnet-02d9b873c4971a9cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d9b873c4971a9cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713165548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "utility-ap-south-1b-hp-udd-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "utility-ap-south-1b-hp-udd-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:subnet/subnet-0eb925d892e6fffc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb925d892e6fffc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713165548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "utility-ap-south-1a-hp-udd-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "hp-udd-prod",
              "Name": "utility-ap-south-1a-hp-udd-prod",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/hp-udd-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01a46576852d5b10f"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713165548:vpc/vpc-01a46576852d5b10f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04dde89aa517b78cd",
            "default_route_table_id": "rtb-0e7e7065923c05b66",
            "default_security_group_id": "sg-0277d7fde10c00ffd",
            "dhcp_options_id": "dopt-04c8daf0e83ff01e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a46576852d5b10f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7e7065923c05b66",
            "owner_id": "339713165548",
            "tags": {
              "Name": "hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            },
            "tags_all": {
              "Name": "hp-udd-prod",
              "kubernetes.io/cluster/hp-udd-prod": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}